[package]
name = "runtime-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leetcode-rs = { path = "../leetcode-rs" }
anyhow = "1.0.75"
log = "0.4.20"
simple_logger = "4.2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
